--- a/Resources/views/task/execute.html.twig
+++ b/Resources/views/task/execute.html.twig
@@ -15,7 +15,7 @@
 
 {% block body %}
     <div class="row">
-        <div class="col-12 col-md-6 col-xl-4">
+        <div class="col-12 col-md-6">
             <div class="card mb-3">
                 <div class="card-header font-weight-bolder">Information</div>
                 <table class="table table-striped table-hover table-sm mb-0">
@@ -26,7 +26,7 @@
                 </table>
             </div>
         </div>
-        <div class="col-12 col-md-6 col-xl-4">
+        <div class="col-12 col-md-6">
             <div class="card mb-3">
                 <div class="card-header font-weight-bolder">{{ 'spipu.process.field.process.options'|trans }}</div>
                 <table class="table table-striped table-hover table-sm mb-0">
@@ -37,7 +37,7 @@
                 </table>
             </div>
         </div>
-        <div class="col-12 col-md-6 col-xl-4">
+        <div class="col-12">
             <div class="card mb-3">
                 <div class="card-header font-weight-bolder">{{ 'spipu.process.field.process.parameters'|trans }}</div>
                 <table class="table table-striped table-hover table-sm mb-0">
