--- a/Resources/views/task/show.html.twig
+++ b/Resources/views/task/show.html.twig
@@ -58,8 +58,16 @@
         </div>
         <div class="col-xs-12 col-lg-6 col-xl-4">
             <div class="card mb-3">
-                <div class="card-header font-weight-bold">{{ 'spipu.process.fieldset.try'|trans }}</div>
+                <div class="card-header font-weight-bold">{{ 'spipu.process.fieldset.exsecution'|trans }}</div>
                 <table class="table table-striped table-hover table-sm mb-0">
+                    <tr>
+                        <th>{{ 'spipu.process.field.task.scheduled_at'|trans }}</th>
+                        <td>{% if resource.scheduledAt %}{{ resource.scheduledAt|date('Y-m-d H:i:s')  }}{% else %}-{% endif %}</td>
+                    </tr>
+                    <tr>
+                        <th>{{ 'spipu.process.field.task.executed_at'|trans }}</th>
+                        <td>{% if resource.executedAt %}{{ resource.executedAt|date('Y-m-d H:i:s')  }}{% else %}-{% endif %}</td>
+                    </tr>
                     <tr>
                         <th class="w-25">{{ 'spipu.process.field.task.try_number'|trans }}</th>
                         <td>{{ resource.tryNumber }}</td>
