prepare the schedule of a task + add unit tests

--- a/Resources/views/task/show.html.twig
+++ b/Resources/views/task/show.html.twig
@@ -58,7 +58,7 @@
         </div>
         <div class="col-xs-12 col-lg-6 col-xl-4">
             <div class="card mb-3">
-                <div class="card-header font-weight-bold">{{ 'spipu.process.fieldset.exsecution'|trans }}</div>
+                <div class="card-header font-weight-bold">{{ 'spipu.process.fieldset.execution'|trans }}</div>
                 <table class="table table-striped table-hover table-sm mb-0">
                     <tr>
                         <th>{{ 'spipu.process.field.task.scheduled_at'|trans }}</th>
