--- a/Resources/views/task/show.html.twig
+++ b/Resources/views/task/show.html.twig
@@ -98,7 +98,7 @@
         <div class="col-xs-12 col-lg-12 col-xl-4">
             <div class="card mb-3">
                 <div class="card-header font-weight-bold">{{ 'spipu.process.fieldset.inputs'|trans }}</div>
-                <table class="table">
+                <table class="table table-sm mb-0">
                     {% for key, value in resource.inputsAsJson %}
                         <tr>
                             <th class="w-25">{{ key }}</th>
@@ -111,6 +111,16 @@
                     {% endfor %}
                 </table>
             </div>
+            {% if processConfig.options.process_lock %}
+            <div class="card mb-3">
+                <div class="card-header font-weight-bold">{{ 'spipu.process.field.process.locks'|trans }}</div>
+                <table class="table table-sm mb-0">
+                    {% for lock in processConfig.options.process_lock %}
+                        <tr><td>{{ lock }}</td></tr>
+                    {% endfor %}
+                </table>
+            </div>
+            {% endif %}
         </div>
     </div>
 
